--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 										<!-- header left: logo and link to homepage -->
 										<td width="320" valign="top">
 											<!-- set an image for header left - must be 320px width (height can be variable) -->
-											<a href="#" target="_blank"><img src="img/header-l.gif" width="320" height="60" border="0" alt="Header (left)" /></a>
+											<a href="#" target="_blank"><img src="http://static.elastic.io/email/img/header-l.gif" width="320" height="60" border="0" alt="Header (left)" /></a>
 										</td>
 										<!-- /header left -->
 										<!-- header right: hidden in mobile version -->
 										<td width="280" valign="top" class="hide">
 											<!-- set an image for header right - must be 280px width (height can be variable) -->
-											<img src="img/header-r.gif" width="280" height="60" border="0" alt="Header (right)" />
+											<img src="http://static.elastic.io/email/img/header-r.gif" width="280" height="60" border="0" alt="Header (right)" />
 										</td>
 										<!-- /header right -->
 									</tr>
@@ -243,13 +243,13 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 									<!-- hero article main image: must be 560px x 186px -->
 									<tr>
 										<td>
-											<img src="img/hero.jpg" width="560" height="200" border="0" alt="" class="heroimage" />
+											<img src="http://static.elastic.io/email/img/hero.jpg" width="560" height="200" border="0" alt="" class="heroimage" />
 										</td>
 									</tr>
 									<!-- /hero article main image -->
 									<tr>
 										<td>
-											<img src="img/shadow.gif" width="560" height="8" border="0" alt="" class="shadow" />
+											<img src="http://static.elastic.io/email/img/shadow.gif" width="560" height="8" border="0" alt="" class="shadow" />
 										</td>
 									</tr>
 								</table>
@@ -265,7 +265,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 												<tr valign="top">
 													<!-- standard article icon -->
 													<td width="65">
-														<img src="img/icon.gif" width="60" height="60" border="0" alt="Icon" />
+														<img src="http://static.elastic.io/email/img/icon.gif" width="60" height="60" border="0" alt="Icon" />
 													</td>
 													<!-- /standard article icon -->
 													<!-- standard article heading text -->
@@ -288,7 +288,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 										<!-- /standard article textarea -->
 										<!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
 										<td class="hide">
-											<img style="margin-bottom:1em;" src="img/large-photo-example-r.jpg" width="280" height="240" border="0" alt="" />
+											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-r.jpg" width="280" height="240" border="0" alt="" />
 										</td>
 										<!-- /standard article main image -->
 									</tr>
@@ -301,7 +301,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 									<tr valign="top">
 										<!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
 										<td class="hide">
-											<img style="margin-bottom:1em;" src="img/large-photo-example-l.jpg" width="280" height="240" border="0" alt="" />
+											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-l.jpg" width="280" height="240" border="0" alt="" />
 										</td>
 										<!-- /standard article main image -->
 										<!-- standard article textarea -->
@@ -310,7 +310,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 												<tr valign="top">
 													<!-- standard article icon -->
 													<td width="65">
-														<img src="img/icon.gif" width="60" height="60" border="0" alt="Icon" />
+														<img src="http://static.elastic.io/email/img/icon.gif" width="60" height="60" border="0" alt="Icon" />
 													</td>
 													<!-- /standard article icon -->
 													<!-- standard article heading text -->
@@ -344,12 +344,12 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 												<tr valign="top">
 													<!-- blank cell - do not use for content -->
 													<td bgcolor="#ffffff" height="18">
-														<img src="img/blank.gif" width="1" height="1" border="0" alt="" />
+														<img src="http://static.elastic.io/email/img/blank.gif" width="1" height="1" border="0" alt="" />
 													</td>
 													<!-- /blank cell -->
 													<!-- secondary article (120px image) main image -->
 													<td width="120" rowspan="2">
-														<a href="{*WINNERSLINK*}" target="_blank"><img src="img/secondary-article-short-story.jpg" width="120" height="90" border="0" alt="" /></a>
+														<a href="{*WINNERSLINK*}" target="_blank"><img src="http://static.elastic.io/email/img/secondary-article-short-story.jpg" width="120" height="90" border="0" alt="" /></a>
 													</td>
 													<!-- /secondary article (120px image) main image -->
 												</tr>
@@ -359,14 +359,14 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 															<tr>
 																<!-- blank cell - do not use for content -->
 																<td height="10" colspan="2">
-																	<img src="img/blank.gif" width="1" height="1" border="0" alt="" />
+																	<img src="http://static.elastic.io/email/img/blank.gif" width="1" height="1" border="0" alt="" />
 																</td>
 																<!-- /blank cell -->
 															</tr>
 															<tr>
 																<!-- blank cell - do not use for content -->
 																<td width="10">
-																	<img src="img/blank.gif" width="1" height="1" border="0" alt="" />
+																	<img src="http://static.elastic.io/email/img/blank.gif" width="1" height="1" border="0" alt="" />
 																</td>
 																<!-- /blank cell -->
 																<!-- secondary article (120px image) heading text -->
@@ -383,7 +383,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 												<tr valign="top" class="hide">
 													<!-- blank cell - do not use for content -->
 													<td bgcolor="#ffffff" height="18">
-														<img src="img/blank.gif" width="1" height="1" border="0" alt="" />
+														<img src="http://static.elastic.io/email/img/blank.gif" width="1" height="1" border="0" alt="" />
 													</td>
 													<!-- /blank cell -->
 												</tr>
@@ -405,7 +405,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 									</tr>
 									<tr>
 										<td>
-											<img src="img/shadow.gif" width="560" height="8" border="0" alt="" class="shadow" />
+											<img src="http://static.elastic.io/email/img/shadow.gif" width="560" height="8" border="0" alt="" class="shadow" />
 										</td>
 									</tr>
 								</table>
@@ -419,7 +419,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 											<table width="560" cellpadding="10" cellspacing="0" border="0" align="center" class="innertable">
 												<tr>
 													<td>
-														<h1 style="font-size:26px; line-height:1.1; font-weight:normal; margin-top:0; margin-bottom:.5em; color:#666666;"><a style="color:#114eb1;" href="#" target="_blank">HEADING</a> <a class="hide" href="#" target="_blank"><img style="display:block; border:none; outline:none; text-decoration:none; margin-left:5px;" align="right" src="img/secondary-article-long-story.jpg" width="140" height="112" border="0" alt="" /></a></h1>
+														<h1 style="font-size:26px; line-height:1.1; font-weight:normal; margin-top:0; margin-bottom:.5em; color:#666666;"><a style="color:#114eb1;" href="#" target="_blank">HEADING</a> <a class="hide" href="#" target="_blank"><img style="display:block; border:none; outline:none; text-decoration:none; margin-left:5px;" align="right" src="http://static.elastic.io/email/img/secondary-article-long-story.jpg" width="140" height="112" border="0" alt="" /></a></h1>
 														<p style="margin-top:0; margin-bottom:0;">Ex graeci civibus eleifend vim, mel et utroque fastidii. Sed eu omnis disputando, voluptatum appellantur vix an. Exerci detracto at his, at illud debitis vis, augue congue inimicus his ei. Cetero intellegat ius an. Eu sed nobis tation, erant elaboraret eam at.</p>
 													</td>
 												</tr>
@@ -428,7 +428,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 									</tr>
 									<tr>
 										<td>
-											<img src="img/shadow.gif" width="560" height="8" border="0" alt="" class="shadow" />
+											<img src="http://static.elastic.io/email/img/shadow.gif" width="560" height="8" border="0" alt="" class="shadow" />
 										</td>
 									</tr>
 								</table>
@@ -458,11 +458,11 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 												<tr>
 													<td style="color:#333333;">
 														<p>
-															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="img/facebook.gif" width="32" height="32" border="0" alt="Facebook" /></a>
-															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="img/googleplus.gif" width="32" height="32" border="0" alt="Google+" /></a>
-															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="img/linkedin.gif" width="32" height="32" border="0" alt="LinkedIn" /></a>
-															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="img/twitter.gif" width="32" height="32" border="0" alt="Twitter" /></a>
-															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="img/youtube.gif" width="32" height="32" border="0" alt="YouTube" /></a>
+															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/facebook.gif" width="32" height="32" border="0" alt="Facebook" /></a>
+															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/googleplus.gif" width="32" height="32" border="0" alt="Google+" /></a>
+															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/linkedin.gif" width="32" height="32" border="0" alt="LinkedIn" /></a>
+															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/twitter.gif" width="32" height="32" border="0" alt="Twitter" /></a>
+															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/youtube.gif" width="32" height="32" border="0" alt="YouTube" /></a>
 														</p>
 													</td>
 												</tr>
