--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		   create a wrapper div around your email and that div will inherit your embedded body styles.
 		   The "#body_style" is defined for AOL because it does not support your embedded body definition nor
 		   your body tag, we will use this class in our wrapper div. */
-		body, #body_style {width:100% !important; min-height:1000px; color:#333333; background:#e0dbcf; font-family:Arial,Helvetica,sans-serif; font-size:13px; line-height:1.4;}
+		body, #body_style {width:100% !important; min-height:1000px; color:#333333; background:#e0dbcf; font-family:'Oxygen',Helvetica,sans-serif; font-size:13px; line-height:1.4;}
 
 		/* This is the embedded CSS link color for Gmail. This will overwrite Hotmail and Yahoo Beta's
 		   embedded link colors and make it consistent with Gmail. Also use this rule on inline CSS. */
@@ -193,18 +193,19 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 						<tr>
 							<td>
 								<!-- set a value for bgcolor -->
-								<table bgcolor="#cccccc" text="#ffffff" width="100%" cellpadding="0" cellspacing="0" border="0">	
+								<table bgcolor="#000000" text="#ffffff" width="100%" cellpadding="0" cellspacing="0" border="0">
 									<tr>
 										<!-- header left: logo and link to homepage -->
 										<td width="320" valign="top">
 											<!-- set an image for header left - must be 320px width (height can be variable) -->
-											<a href="#" target="_blank"><img src="http://static.elastic.io/email/img/header-l.gif" width="320" height="60" border="0" alt="Header (left)" /></a>
+											<a href="http://elastic.io" target="_blank"><img src="http://static.elastic.io/email/img/elasticio_logo_white_320.png" width="320" height="81" border="0" alt="elastic.io Logo" /></a>
 										</td>
 										<!-- /header left -->
 										<!-- header right: hidden in mobile version -->
 										<td width="280" valign="top" class="hide">
 											<!-- set an image for header right - must be 280px width (height can be variable) -->
-											<img src="http://static.elastic.io/email/img/header-r.gif" width="280" height="60" border="0" alt="Header (right)" />
+											<!--<img src="http://static.elastic.io/email/img/header-r.gif" width="280" height="60" border="0" alt="Header (right)" />-->
+                                            <p style="color: #ffffff; margin: 10px; font-size: 22px;">Turn-key SaaS Integration</p>
 										</td>
 										<!-- /header right -->
 									</tr>
@@ -229,10 +230,10 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 												<tr>
 													<td>
 														<!-- hero article heading text -->
-														<h1 style="color:#666666; margin-bottom:.5em;">Hi *|TITLE:FNAME|*</h1>
+														<h1 style="color:#666666; margin-bottom:.5em;" mc:edit="header">Hi *|TITLE:FNAME|*</h1>
 														<!-- /hero article heading text -->
 														<!-- hero article paragraph text -->
-														<p style="margin-top:0; margin-bottom:0;">Lorem ipsum dolor sit amet, quo epicuri volutpat no. Causae option accusamus in est. Mea id ignota meliore facilis, cu vim omnium appareat mediocrem. Eu oblique voluptua electram his. Mei eu movet recteque. Vis nulla graeci praesent ad, mediocrem expetenda pro ad.</p>
+														<p style="margin-top:0; margin-bottom:0;" mc:edit="header_text">Lorem ipsum dolor sit amet, quo epicuri volutpat no. Causae option accusamus in est. Mea id ignota meliore facilis, cu vim omnium appareat mediocrem. Eu oblique voluptua electram his. Mei eu movet recteque. Vis nulla graeci praesent ad, mediocrem expetenda pro ad.</p>
 														<!-- /hero article paragraph text -->
 													</td>
 												</tr>
@@ -243,7 +244,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 									<!-- hero article main image: must be 560px x 186px -->
 									<tr>
 										<td>
-											<img src="http://static.elastic.io/email/img/hero.jpg" width="560" height="200" border="0" alt="" class="heroimage" />
+											<img src="http://static.elastic.io/email/img/hero.jpg" width="560" height="200" border="0" alt="" class="heroimage" mc:edit="header_image" mc:hideable/>
 										</td>
 									</tr>
 									<!-- /hero article main image -->
@@ -257,7 +258,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 
 
 								<!-- standard article (left text) -->
-								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable">
+								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:repeatable="image_with_content" mc:variant="content with left text">
 									<tr valign="top">
 										<!-- standard article textarea -->
 										<td>
@@ -265,12 +266,12 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 												<tr valign="top">
 													<!-- standard article icon -->
 													<td width="65">
-														<img src="http://static.elastic.io/email/img/icon.gif" width="60" height="60" border="0" alt="Icon" />
+														<img src="http://static.elastic.io/email/img/icon.gif" width="60" height="60" border="0" alt="Icon" mc:editable="left_icon"/>
 													</td>
 													<!-- /standard article icon -->
 													<!-- standard article heading text -->
 													<td>
-														<h1 style="color:#666666;"><a style="color:#114eb1;" href="#" target="_blank">HEADING</a></h1>
+														<h1 style="color:#666666;" mc:editable="left_header"><a style="color:#114eb1;" href="#" target="_blank">HEADING</a></h1>
 													</td>
 													<!-- /standard article heading text -->
 												</tr>
@@ -278,7 +279,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 											<!-- standard article paragraph text -->
 											<table width="100%" cellpadding="10" cellspacing="0" border="0">
 												<tr valign="top">
-													<td>
+													<td mc:editable="left_text">
 														<p style="margin-top:0; margin-bottom:0;">Timeam mentitum an nam. Mei ne prima perfecto adversarium. Quo eu tamquam invidunt verterem, albucius dissentiet ea eum. Facete fabellas referrentur et qui. Cu harum tempor vivendum vel. Nec quem movet nullam in. No stet tota pri.</p>
 													</td>
 												</tr>
@@ -288,7 +289,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 										<!-- /standard article textarea -->
 										<!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
 										<td class="hide">
-											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-r.jpg" width="280" height="240" border="0" alt="" />
+											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-r.jpg" width="280" height="240" border="0" alt="" mc:editable="right_image"/>
 										</td>
 										<!-- /standard article main image -->
 									</tr>
@@ -297,11 +298,11 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 
 
 								<!-- standard article (right text) -->
-								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable">
+								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:repeatable="image_with_content" mc:variant="content with right text">
 									<tr valign="top">
 										<!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
 										<td class="hide">
-											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-l.jpg" width="280" height="240" border="0" alt="" />
+											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-l.jpg" width="280" height="240" border="0" alt="" mc:editable="left_image"/>
 										</td>
 										<!-- /standard article main image -->
 										<!-- standard article textarea -->
@@ -310,12 +311,12 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 												<tr valign="top">
 													<!-- standard article icon -->
 													<td width="65">
-														<img src="http://static.elastic.io/email/img/icon.gif" width="60" height="60" border="0" alt="Icon" />
+														<img src="http://static.elastic.io/email/img/icon.gif" width="60" height="60" border="0" alt="Icon" mc:editable="right_icon"/>
 													</td>
 													<!-- /standard article icon -->
 													<!-- standard article heading text -->
 													<td>
-														<h1 style="color:#666666;"><a style="color:#114eb1;" href="#" target="_blank">HEADING</a></h1>
+														<h1 style="color:#666666;" mc:editable="right_header"><a style="color:#114eb1;" href="#" target="_blank">HEADING</a></h1>
 													</td>
 													<!-- /standard article heading text -->
 												</tr>
@@ -323,7 +324,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 											<!-- standard article paragraph text -->
 											<table width="100%" cellpadding="10" cellspacing="0" border="0">
 												<tr valign="top">
-													<td>
+													<td mc:editable="right_text">
 														<p style="margin-top:0; margin-bottom:0;">Inermis indoctum vis in, has soleat complectitur te. Ut est stet civibus, mucius iriure ad duo. Sumo tantas et est, ea duo elitr utroque, ne mea dicant tincidunt scribentur. Sit dico accusata et. Sint inimicus cu nam, odio velit minim sit ut.</p>
 													</td>
 												</tr>
