--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 
 
 								<!-- standard article (left text) -->
-								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:repeatable="image_with_content" mc:variant="content with left text">
+								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable">
 									<tr valign="top">
 										<!-- standard article textarea -->
 										<td>
@@ -298,7 +298,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 
 
 								<!-- standard article (right text) -->
-								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:repeatable="image_with_content" mc:variant="content with right text">
+								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable">
 									<tr valign="top">
 										<!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
 										<td class="hide">
