--- a/index.html
+++ b/index.html
@@ -258,38 +258,36 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 
 
 								<!-- standard article (left text) -->
-								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable">
+								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
 									<tr valign="top">
 										<!-- standard article textarea -->
 										<td>
-											<table width="270" cellpadding="0" cellspacing="0" border="0">
+											<table width="270" cellpadding="10" cellspacing="0" border="0">
 												<tr valign="top">
-													<!-- standard article icon -->
-													<td width="65">
-														<img src="http://static.elastic.io/email/img/icon.gif" width="60" height="60" border="0" alt="Icon" mc:editable="left_icon"/>
-													</td>
-													<!-- /standard article icon -->
-													<!-- standard article heading text -->
 													<td>
-														<h1 style="color:#666666;" mc:editable="left_header"><a style="color:#114eb1;" href="#" target="_blank">HEADING</a></h1>
+														<h1 style="color:#666666;" mc:edit="sub_header_1">HEADING</h1>
 													</td>
-													<!-- /standard article heading text -->
 												</tr>
 											</table>
 											<!-- standard article paragraph text -->
 											<table width="100%" cellpadding="10" cellspacing="0" border="0">
 												<tr valign="top">
-													<td mc:editable="left_text">
+													<td mc:edit="sub_text_1">
 														<p style="margin-top:0; margin-bottom:0;">Timeam mentitum an nam. Mei ne prima perfecto adversarium. Quo eu tamquam invidunt verterem, albucius dissentiet ea eum. Facete fabellas referrentur et qui. Cu harum tempor vivendum vel. Nec quem movet nullam in. No stet tota pri.</p>
 													</td>
 												</tr>
+                                                <tr valign="top">
+                                                    <td align="right">
+                                                        <a href="#" mc:edit="sub_link_1">Read More...</a>
+                                                    </td>
+                                                </tr>
 											</table>
 											<!-- /standard article paragraph text -->
 										</td>
 										<!-- /standard article textarea -->
 										<!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
 										<td class="hide">
-											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-r.jpg" width="280" height="240" border="0" alt="" mc:editable="right_image"/>
+											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-r.jpg" width="280" height="240" border="0" alt="" mc:edit="sub_image_1"/>
 										</td>
 										<!-- /standard article main image -->
 									</tr>
@@ -298,36 +296,34 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 
 
 								<!-- standard article (right text) -->
-								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable">
+								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
 									<tr valign="top">
 										<!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
 										<td class="hide">
-											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-l.jpg" width="280" height="240" border="0" alt="" mc:editable="left_image"/>
+											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-l.jpg" width="280" height="240" border="0" alt="" mc:edit="sub_image_2"/>
 										</td>
 										<!-- /standard article main image -->
 										<!-- standard article textarea -->
 										<td>
-											<table width="270" cellpadding="0" cellspacing="0" border="0">
+											<table width="270" cellpadding="10" cellspacing="0" border="0">
 												<tr valign="top">
-													<!-- standard article icon -->
-													<td width="65">
-														<img src="http://static.elastic.io/email/img/icon.gif" width="60" height="60" border="0" alt="Icon" mc:editable="right_icon"/>
-													</td>
-													<!-- /standard article icon -->
-													<!-- standard article heading text -->
 													<td>
-														<h1 style="color:#666666;" mc:editable="right_header"><a style="color:#114eb1;" href="#" target="_blank">HEADING</a></h1>
+														<h1 style="color:#666666;" mc:editable="right_header" mc:edit="sub_header_2">HEADING</h1>
 													</td>
-													<!-- /standard article heading text -->
 												</tr>
 											</table>
 											<!-- standard article paragraph text -->
 											<table width="100%" cellpadding="10" cellspacing="0" border="0">
 												<tr valign="top">
-													<td mc:editable="right_text">
+													<td mc:edit="sub_text_2">
 														<p style="margin-top:0; margin-bottom:0;">Inermis indoctum vis in, has soleat complectitur te. Ut est stet civibus, mucius iriure ad duo. Sumo tantas et est, ea duo elitr utroque, ne mea dicant tincidunt scribentur. Sit dico accusata et. Sint inimicus cu nam, odio velit minim sit ut.</p>
 													</td>
 												</tr>
+                                                <tr valign="top">
+                                                    <td align="right">
+                                                        <a href="#" mc:edit="sub_link_2">Read More...</a>
+                                                    </td>
+                                                </tr>
 											</table>
 											<!-- /standard article paragraph text -->
 										</td>
@@ -337,8 +333,84 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 								<!-- /standard article (right text) -->
 
 
+
+                                <!-- standard article (left text) -->
+                                <table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
+                                    <tr valign="top">
+                                        <!-- standard article textarea -->
+                                        <td>
+                                            <table width="270" cellpadding="10" cellspacing="0" border="0">
+                                                <tr valign="top">
+                                                    <td>
+                                                        <h1 style="color:#666666;" mc:edit="sub_header_3">HEADING</h1>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <!-- standard article paragraph text -->
+                                            <table width="100%" cellpadding="10" cellspacing="0" border="0">
+                                                <tr valign="top">
+                                                    <td mc:edit="sub_text_3">
+                                                        <p style="margin-top:0; margin-bottom:0;">Timeam mentitum an nam. Mei ne prima perfecto adversarium. Quo eu tamquam invidunt verterem, albucius dissentiet ea eum. Facete fabellas referrentur et qui. Cu harum tempor vivendum vel. Nec quem movet nullam in. No stet tota pri.</p>
+                                                    </td>
+                                                </tr>
+                                                <tr valign="top">
+                                                    <td align="right">
+                                                        <a href="#" mc:edit="sub_link_3">Read More...</a>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <!-- /standard article paragraph text -->
+                                        </td>
+                                        <!-- /standard article textarea -->
+                                        <!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
+                                        <td class="hide">
+                                            <img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-r.jpg" width="280" height="240" border="0" alt="" mc:edit="sub_image_3"/>
+                                        </td>
+                                        <!-- /standard article main image -->
+                                    </tr>
+                                </table>
+                                <!-- /standard article (left text) -->
+
+
+                                <!-- standard article (right text) -->
+                                <table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
+                                    <tr valign="top">
+                                        <!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
+                                        <td class="hide">
+                                            <img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-l.jpg" width="280" height="240" border="0" alt="" mc:edit="sub_image_4"/>
+                                        </td>
+                                        <!-- /standard article main image -->
+                                        <!-- standard article textarea -->
+                                        <td>
+                                            <table width="270" cellpadding="10" cellspacing="0" border="0">
+                                                <tr valign="top">
+                                                    <td>
+                                                        <h1 style="color:#666666;" mc:editable="right_header" mc:edit="sub_header_4">HEADING</h1>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <!-- standard article paragraph text -->
+                                            <table width="100%" cellpadding="10" cellspacing="0" border="0">
+                                                <tr valign="top">
+                                                    <td mc:edit="sub_text_4">
+                                                        <p style="margin-top:0; margin-bottom:0;">Inermis indoctum vis in, has soleat complectitur te. Ut est stet civibus, mucius iriure ad duo. Sumo tantas et est, ea duo elitr utroque, ne mea dicant tincidunt scribentur. Sit dico accusata et. Sint inimicus cu nam, odio velit minim sit ut.</p>
+                                                    </td>
+                                                </tr>
+                                                <tr valign="top">
+                                                    <td align="right">
+                                                        <a href="#" mc:edit="sub_link_4">Read More...</a>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <!-- /standard article paragraph text -->
+                                        </td>
+                                        <!-- /standard article textarea -->
+                                    </tr>
+                                </table>
+                                <!-- /standard article (right text) -->
+
 								<!-- secondary article (short story) -->
-								<table bgcolor="#f6f4f1" style="margin-bottom:1em;" width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable">
+								<table bgcolor="#f6f4f1" style="margin-bottom:1em;" width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
 									<tr valign="top">
 										<td>
 											<table align="left" width="280" cellpadding="0" cellspacing="0" border="0">
@@ -350,7 +422,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 													<!-- /blank cell -->
 													<!-- secondary article (120px image) main image -->
 													<td width="120" rowspan="2">
-														<a href="{*WINNERSLINK*}" target="_blank"><img src="http://static.elastic.io/email/img/secondary-article-short-story.jpg" width="120" height="90" border="0" alt="" /></a>
+														<img src="http://static.elastic.io/email/img/secondary-article-short-story.jpg" width="120" height="90" border="0" alt="" mc:edit="second_article_image"/>
 													</td>
 													<!-- /secondary article (120px image) main image -->
 												</tr>
@@ -372,7 +444,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 																<!-- /blank cell -->
 																<!-- secondary article (120px image) heading text -->
 																<td>
-																	<h1 style="color:#666666;"><a style="color:#114eb1;" href="#" target="_blank">HEADING</a></h1>
+																	<h1 style="color:#666666;" mc:edit="second_article_header">HEADING</h1>
 																</td>
 																<!-- /secondary article (120px image) heading text -->
 															</tr>
@@ -393,7 +465,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 														<!-- secondary article (120px image) paragraph text -->
 														<table width="100%" cellpadding="10" cellspacing="0" border="0">
 															<tr>
-																<td>
+																<td mc:editable="second_article_content">
 																	<p style="margin-top:0; margin-bottom:0;">Ne sea soluta voluptatum. Ut nec augue disputationi, unum utamur vis in. Possit gubergren at mea. Sed an erant movet.</p>
 																</td>
 															</tr>
@@ -414,14 +486,14 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 
 
 								<!-- secondary article (long story) -->
-								<table bgcolor="#f6f4f1" style="margin-bottom:1em;" width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable">
+								<table bgcolor="#f6f4f1" style="margin-bottom:1em;" width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
 									<tr>
 										<td>
 											<table width="560" cellpadding="10" cellspacing="0" border="0" align="center" class="innertable">
 												<tr>
 													<td>
-														<h1 style="font-size:26px; line-height:1.1; font-weight:normal; margin-top:0; margin-bottom:.5em; color:#666666;"><a style="color:#114eb1;" href="#" target="_blank">HEADING</a> <a class="hide" href="#" target="_blank"><img style="display:block; border:none; outline:none; text-decoration:none; margin-left:5px;" align="right" src="http://static.elastic.io/email/img/secondary-article-long-story.jpg" width="140" height="112" border="0" alt="" /></a></h1>
-														<p style="margin-top:0; margin-bottom:0;">Ex graeci civibus eleifend vim, mel et utroque fastidii. Sed eu omnis disputando, voluptatum appellantur vix an. Exerci detracto at his, at illud debitis vis, augue congue inimicus his ei. Cetero intellegat ius an. Eu sed nobis tation, erant elaboraret eam at.</p>
+														<h1 style="font-size:26px; line-height:1.1; font-weight:normal; margin-top:0; margin-bottom:.5em; color:#666666;">More information <a class="hide" href="#" target="_blank"><img style="display:block; border:none; outline:none; text-decoration:none; margin-left:5px;" align="right" src="http://static.elastic.io/email/img/secondary-article-long-story.jpg" width="140" height="112" border="0" alt="" mc:edit="footer_image"/></a></h1>
+														<p style="margin-top:0; margin-bottom:0;" mc:edit="footer_text">Ex graeci civibus eleifend vim, mel et utroque fastidii. Sed eu omnis disputando, voluptatum appellantur vix an. Exerci detracto at his, at illud debitis vis, augue congue inimicus his ei. Cetero intellegat ius an. Eu sed nobis tation, erant elaboraret eam at.</p>
 													</td>
 												</tr>
 											</table>
@@ -459,11 +531,11 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 												<tr>
 													<td style="color:#333333;">
 														<p>
-															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/facebook.gif" width="32" height="32" border="0" alt="Facebook" /></a>
-															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/googleplus.gif" width="32" height="32" border="0" alt="Google+" /></a>
-															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/linkedin.gif" width="32" height="32" border="0" alt="LinkedIn" /></a>
-															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/twitter.gif" width="32" height="32" border="0" alt="Twitter" /></a>
-															<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/youtube.gif" width="32" height="32" border="0" alt="YouTube" /></a>
+															<!--<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/facebook.gif" width="32" height="32" border="0" alt="Facebook" /></a>-->
+															<!--<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/googleplus.gif" width="32" height="32" border="0" alt="Google+" /></a>-->
+															<!--<a href="#" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/linkedin.gif" width="32" height="32" border="0" alt="LinkedIn" /></a>-->
+															<a href="http://twitter.com/elasticio" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/twitter.gif" width="32" height="32" border="0" alt="Twitter" /></a>
+															<a href="http://youtube.com/elasticio" target="_blank"><img style="margin-left:1em;" align="right" src="http://static.elastic.io/email/img/youtube.gif" width="32" height="32" border="0" alt="YouTube" /></a>
 														</p>
 													</td>
 												</tr>
