--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 										<!-- /standard article textarea -->
 										<!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
 										<td class="hide">
-											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-r.jpg" width="280" height="240" border="0" alt="" mc:edit="sub_image_1"/>
+											<img style="padding: 4px;background-color: #fff;border: 1px solid #ccc;margin-bottom:1em;" src="http://dummyimage.com/270x230" width="270" height="230" border="0" alt="" mc:edit="sub_image_1"/>
 										</td>
 										<!-- /standard article main image -->
 									</tr>
@@ -300,7 +300,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 									<tr valign="top">
 										<!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
 										<td class="hide">
-											<img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-l.jpg" width="280" height="240" border="0" alt="" mc:edit="sub_image_2"/>
+                                            <img style="padding: 4px;background-color: #fff;border: 1px solid #ccc;margin-bottom:1em;" src="http://dummyimage.com/270x230" width="270" height="230" border="0" alt="" mc:edit="sub_image_2"/>
 										</td>
 										<!-- /standard article main image -->
 										<!-- standard article textarea -->
@@ -364,7 +364,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
                                         <!-- /standard article textarea -->
                                         <!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
                                         <td class="hide">
-                                            <img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-r.jpg" width="280" height="240" border="0" alt="" mc:edit="sub_image_3"/>
+                                            <img style="padding: 4px;background-color: #fff;border: 1px solid #ccc;margin-bottom:1em;" src="http://dummyimage.com/270x230" width="270" height="230" border="0" alt="" mc:edit="sub_image_3"/>
                                         </td>
                                         <!-- /standard article main image -->
                                     </tr>
@@ -377,7 +377,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
                                     <tr valign="top">
                                         <!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
                                         <td class="hide">
-                                            <img style="margin-bottom:1em;" src="http://static.elastic.io/email/img/large-photo-example-l.jpg" width="280" height="240" border="0" alt="" mc:edit="sub_image_4"/>
+                                            <img style="padding: 4px;background-color: #fff;border: 1px solid #ccc;margin-bottom:1em;" src="http://dummyimage.com/270x230" width="270" height="230" border="0" alt="" mc:edit="sub_image_4"/>
                                         </td>
                                         <!-- /standard article main image -->
                                         <!-- standard article textarea -->
@@ -408,80 +408,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
                                     </tr>
                                 </table>
                                 <!-- /standard article (right text) -->
-
-								<!-- secondary article (short story) -->
-								<table bgcolor="#f6f4f1" style="margin-bottom:1em;" width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
-									<tr valign="top">
-										<td>
-											<table align="left" width="280" cellpadding="0" cellspacing="0" border="0">
-												<tr valign="top">
-													<!-- blank cell - do not use for content -->
-													<td bgcolor="#ffffff" height="18">
-														<img src="http://static.elastic.io/email/img/blank.gif" width="1" height="1" border="0" alt="" />
-													</td>
-													<!-- /blank cell -->
-													<!-- secondary article (120px image) main image -->
-													<td width="120" rowspan="2">
-														<img src="http://static.elastic.io/email/img/secondary-article-short-story.jpg" width="120" height="90" border="0" alt="" mc:edit="second_article_image"/>
-													</td>
-													<!-- /secondary article (120px image) main image -->
-												</tr>
-												<tr valign="top">
-													<td>
-														<table width="160" cellpadding="0" cellspacing="0" border="0" style="padding-bottom:0;">
-															<tr>
-																<!-- blank cell - do not use for content -->
-																<td height="10" colspan="2">
-																	<img src="http://static.elastic.io/email/img/blank.gif" width="1" height="1" border="0" alt="" />
-																</td>
-																<!-- /blank cell -->
-															</tr>
-															<tr>
-																<!-- blank cell - do not use for content -->
-																<td width="10">
-																	<img src="http://static.elastic.io/email/img/blank.gif" width="1" height="1" border="0" alt="" />
-																</td>
-																<!-- /blank cell -->
-																<!-- secondary article (120px image) heading text -->
-																<td>
-																	<h1 style="color:#666666;" mc:edit="second_article_header">HEADING</h1>
-																</td>
-																<!-- /secondary article (120px image) heading text -->
-															</tr>
-														</table>
-													</td>
-												</tr>
-											</table>
-											<table align="right" width="280" cellpadding="0" cellspacing="0" border="0">
-												<tr valign="top" class="hide">
-													<!-- blank cell - do not use for content -->
-													<td bgcolor="#ffffff" height="18">
-														<img src="http://static.elastic.io/email/img/blank.gif" width="1" height="1" border="0" alt="" />
-													</td>
-													<!-- /blank cell -->
-												</tr>
-												<tr valign="top">
-													<td>
-														<!-- secondary article (120px image) paragraph text -->
-														<table width="100%" cellpadding="10" cellspacing="0" border="0">
-															<tr>
-																<td mc:editable="second_article_content">
-																	<p style="margin-top:0; margin-bottom:0;">Ne sea soluta voluptatum. Ut nec augue disputationi, unum utamur vis in. Possit gubergren at mea. Sed an erant movet.</p>
-																</td>
-															</tr>
-														</table>
-														<!-- /secondary article (120px image) paragraph text -->
-													</td>
-												</tr>
-											</table>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<img src="http://static.elastic.io/email/img/shadow.gif" width="560" height="8" border="0" alt="" class="shadow" />
-										</td>
-									</tr>
-								</table>
+                                <br/><br/>
 								<!-- /secondary article (short story) -->
 
 
@@ -492,7 +419,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 											<table width="560" cellpadding="10" cellspacing="0" border="0" align="center" class="innertable">
 												<tr>
 													<td>
-														<h1 style="font-size:26px; line-height:1.1; font-weight:normal; margin-top:0; margin-bottom:.5em; color:#666666;">More information <a class="hide" href="#" target="_blank"><img style="display:block; border:none; outline:none; text-decoration:none; margin-left:5px;" align="right" src="http://static.elastic.io/email/img/secondary-article-long-story.jpg" width="140" height="112" border="0" alt="" mc:edit="footer_image"/></a></h1>
+														<h1 style="font-size:26px; line-height:1.1; font-weight:normal; margin-top:0; margin-bottom:.5em; color:#666666;" mc:edit="footer_header">More information</h1>
 														<p style="margin-top:0; margin-bottom:0;" mc:edit="footer_text">Ex graeci civibus eleifend vim, mel et utroque fastidii. Sed eu omnis disputando, voluptatum appellantur vix an. Exerci detracto at his, at illud debitis vis, augue congue inimicus his ei. Cetero intellegat ius an. Eu sed nobis tation, erant elaboraret eam at.</p>
 													</td>
 												</tr>
