Updated links, now they are inside the editable zone

--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 													</td>
 												</tr>
                                                 <tr valign="top">
-                                                    <td align="right">
-                                                        <a href="#" mc:edit="sub_link_1">Read More...</a>
+                                                    <td align="right" mc:edit="sub_link_1">
+                                                        <a href="#">Read More...</a>
                                                     </td>
                                                 </tr>
 											</table>
@@ -320,8 +320,8 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 													</td>
 												</tr>
                                                 <tr valign="top">
-                                                    <td align="right">
-                                                        <a href="#" mc:edit="sub_link_2">Read More...</a>
+                                                    <td align="right" mc:edit="sub_link_2">
+                                                        <a href="#">Read More...</a>
                                                     </td>
                                                 </tr>
 											</table>
@@ -354,8 +354,8 @@ The yahoo attribute is added if you are using media queries for mobile devices (
                                                     </td>
                                                 </tr>
                                                 <tr valign="top">
-                                                    <td align="right">
-                                                        <a href="#" mc:edit="sub_link_3">Read More...</a>
+                                                    <td align="right" mc:edit="sub_link_3">
+                                                        <a href="#">Read More...</a>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -397,8 +397,8 @@ The yahoo attribute is added if you are using media queries for mobile devices (
                                                     </td>
                                                 </tr>
                                                 <tr valign="top">
-                                                    <td align="right">
-                                                        <a href="#" mc:edit="sub_link_4">Read More...</a>
+                                                    <td align="right" mc:edit="sub_link_4">
+                                                        <a href="#">Read More...</a>
                                                     </td>
                                                 </tr>
                                             </table>
