Removed hero image, added 5th section

--- a/index.html
+++ b/index.html
@@ -241,21 +241,9 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 										</td>
 										<!-- /hero article textarea -->
 									</tr>
-									<!-- hero article main image: must be 560px x 186px -->
-									<tr>
-										<td>
-											<img src="http://static.elastic.io/email/img/hero.jpg" width="560" height="200" border="0" alt="" class="heroimage" mc:edit="header_image" mc:hideable/>
-										</td>
-									</tr>
-									<!-- /hero article main image -->
-									<tr>
-										<td>
-											<img src="http://static.elastic.io/email/img/shadow.gif" width="560" height="8" border="0" alt="" class="shadow" />
-										</td>
-									</tr>
 								</table>
 								<!-- /hero article -->
-
+                                <br/>
 
 								<!-- standard article (left text) -->
 								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
@@ -293,7 +281,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 									</tr>
 								</table>
 								<!-- /standard article (left text) -->
-
+                                <br/>
 
 								<!-- standard article (right text) -->
 								<table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
@@ -331,7 +319,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
 									</tr>
 								</table>
 								<!-- /standard article (right text) -->
-
+                                <br/>
 
 
                                 <!-- standard article (left text) -->
@@ -370,7 +358,7 @@ The yahoo attribute is added if you are using media queries for mobile devices (
                                     </tr>
                                 </table>
                                 <!-- /standard article (left text) -->
-
+                                <br/>
 
                                 <!-- standard article (right text) -->
                                 <table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
@@ -407,9 +395,47 @@ The yahoo attribute is added if you are using media queries for mobile devices (
                                         <!-- /standard article textarea -->
                                     </tr>
                                 </table>
+                                <br/>
+
+                                <!-- standard article (left text) -->
+                                <table width="560" cellpadding="0" cellspacing="0" border="0" align="center" class="innertable" mc:hideable>
+                                    <tr valign="top">
+                                        <!-- standard article textarea -->
+                                        <td>
+                                            <table width="270" cellpadding="10" cellspacing="0" border="0">
+                                                <tr valign="top">
+                                                    <td>
+                                                        <h1 style="color:#666666;" mc:edit="sub_header_5">HEADING</h1>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <!-- standard article paragraph text -->
+                                            <table width="100%" cellpadding="10" cellspacing="0" border="0">
+                                                <tr valign="top">
+                                                    <td mc:edit="sub_text_5">
+                                                        <p style="margin-top:0; margin-bottom:0;">Timeam mentitum an nam. Mei ne prima perfecto adversarium. Quo eu tamquam invidunt verterem, albucius dissentiet ea eum. Facete fabellas referrentur et qui. Cu harum tempor vivendum vel. Nec quem movet nullam in. No stet tota pri.</p>
+                                                    </td>
+                                                </tr>
+                                                <tr valign="top">
+                                                    <td align="right" mc:edit="sub_link_5">
+                                                        <a href="#">Read More...</a>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                            <!-- /standard article paragraph text -->
+                                        </td>
+                                        <!-- /standard article textarea -->
+                                        <!-- standard article main image: hidden in mobile version - must be 280px width (height can be variable) -->
+                                        <td class="hide">
+                                            <img style="padding: 4px;background-color: #fff;border: 1px solid #ccc;margin-bottom:1em;" src="http://dummyimage.com/270x230" width="270" height="230" border="0" alt="" mc:edit="sub_image_5"/>
+                                        </td>
+                                        <!-- /standard article main image -->
+                                    </tr>
+                                </table>
+                                <!-- /standard article (left text) -->
+
                                 <!-- /standard article (right text) -->
                                 <br/><br/>
-								<!-- /secondary article (short story) -->
 
 
 								<!-- secondary article (long story) -->
